--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>About | TeenWell</title>
+  <title>About | HabitTide</title>
 
   <!-- Global CSS -->
   <link rel="stylesheet" href="style.css">
@@ -13,7 +13,7 @@
 <!-- ===== HEADER / NAV ===== -->
 <header class="site-header">
   <div class="container nav">
-    <a class="logo" href="index.html">TeenWell</a>
+    <a class="logo" href="index.html">HabitTide</a>
 
     <nav class="nav-links">
       <a href="index.html">Home</a>
@@ -42,7 +42,7 @@
     <p class="kicker">Our Story</p>
     <h1 class="h1">Empowering students with evidence-based wellness knowledge</h1>
     <p class="lead">
-      TeenWell is a student-led initiative bringing science-backed health insights to teens
+      HabitTide is a student-led initiative bringing science-backed health insights to teens
       in a relatable, simple, and trustworthy way — because understanding your body shouldn't require a medical degree.
     </p>
   </div>
@@ -52,12 +52,12 @@
 <section class="section">
   <div class="container two-col">
     <div>
-      <h2 class="h2">Why I started TeenWell</h2>
+      <h2 class="h2">Why I started HabitTide</h2>
       <p>
         As a high school student passionate about healthcare and technology, as well as being co-president of a club that focuses on teaching concepts which regular classes may skip over, I decided to create this website focused on science-based wellness information in a format made for education.
       </p>
       <p>
-        TeenWell combines medical research, digital education, and student perspective to help young people
+        HabitTide combines medical research, digital education, and student perspective to help young people
         build healthier habits and stronger futures. Focused in all perspectives: academically, mentally, and physically.
       </p>
       <p>
@@ -139,8 +139,8 @@
 <footer class="site-footer">
   <div class="container footer-grid">
     <div>
-      <a class="logo" href="index.html">TeenWell</a>
-      <p class="muted small">© 2025 TeenWell — Educational content only, not medical advice.</p>
+      <a class="logo" href="index.html">HabitTide</a>
+      <p class="muted small">© 2025 HabitTide — Educational content only, not medical advice.</p>
     </div>
 
     <div class="footer-col">
