--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   <!-- ================= NAV ================= -->
   <header class="site-header">
     <div class="container nav">
-      <a class="logo" href="index.html">TeenWell</a>
+      <a class="logo" href="index.html">HabitTide</a>
 
       <nav class="nav-links"> 
         <a class="active" href="index.html">Home</a>
@@ -295,7 +295,7 @@
   <footer class="site-footer">
     <div class="container footer-grid">
       <div class="footer-brand">
-        <a class="logo" href="index.html">TeenWell</a>
+        <a class="logo" href="index.html">HabitTide</a>
         <p class="muted small">© 2025 Teen Wellness Project</p>
       </div>
       <div class="footer-col">
