--- a/resources.html
+++ b/resources.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Resources | TeenWell</title>
+  <title>Resources | HabitTide</title>
   <link rel="stylesheet" href="style.css">
   <style>
     .guest [data-auth="in"] { display: none !important; }
@@ -15,7 +15,7 @@
 <!-- ===== HEADER / NAV ===== -->
 <header class="site-header">
   <div class="container nav">
-    <a class="logo" href="index.html">TeenWell</a>
+    <a class="logo" href="index.html">HabitTide</a>
 
     <nav class="nav-links">
       <a href="index.html">Home</a>
@@ -45,7 +45,7 @@
     <h1 class="h1">Evidence-based health resources for students</h1>
     <p class="lead">
       These organizations publish reliable, science-reviewed information.  
-      TeenWell summarizes content from respected medical institutions — so you can learn confidently.
+      HabitTide summarizes content from respected medical institutions — so you can learn confidently.
     </p>
   </div>
 </section>
@@ -153,8 +153,8 @@
 <footer class="site-footer">
   <div class="container footer-grid">
     <div>
-      <a class="logo" href="index.html">TeenWell</a>
-      <p class="muted small">© 2025 TeenWell — Educational content only, not medical advice.</p>
+      <a class="logo" href="index.html">HabitTide</a>
+      <p class="muted small">© 2025 HabitTide — Educational content only, not medical advice.</p>
     </div>
 
     <div class="footer-col">
