--- a/roadmap.html
+++ b/roadmap.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Project Roadmap | TeenWell</title>
+  <title>Project Roadmap | HabitTide</title>
   <link rel="stylesheet" href="style.css">
   <style>
     .guest [data-auth="in"] { display: none !important; }
@@ -14,7 +14,7 @@
 
 <header class="site-header">
   <div class="container nav">
-    <a class="logo" href="index.html">TeenWell</a>
+    <a class="logo" href="index.html">HabitTide</a>
 
     <nav class="nav-links">
       <a href="index.html">Home</a>
@@ -40,7 +40,7 @@
 <section class="section hero centered">
   <div class="container narrow">
     <p class="kicker">Project Timeline</p>
-    <h1 class="h1">TeenWell Growth Roadmap</h1>
+    <h1 class="h1">HabitTide Growth Roadmap</h1>
     <p class="lead">A long-term project dedicated to improving teen health education with science-based content.</p>
   </div>
 </section>
@@ -108,8 +108,8 @@
 <footer class="site-footer">
   <div class="container footer-grid">
     <div>
-      <a class="logo" href="index.html">TeenWell</a>
-      <p class="muted small">© 2025 TeenWell — Educational content only.</p>
+      <a class="logo" href="index.html">HabitTide</a>
+      <p class="muted small">© 2025 HabitTide — Educational content only.</p>
     </div>
   </div>
 </footer>
