--- a/sign-up.html
+++ b/sign-up.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Sign Up — TeenWell</title>
+  <title>Sign Up — HabitTide</title>
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="signup.css" />
   <style>
@@ -15,7 +15,7 @@
 
   <header class="site-header">
     <div class="container nav">
-      <a class="logo" href="index.html">TeenWell</a>
+      <a class="logo" href="index.html">HabitTide</a>
       <nav class="nav-links">
         <a href="index.html">Home</a>
         <a href="resources.html">Resources</a>
@@ -110,7 +110,7 @@
   <footer class="site-footer">
     <div class="container footer-grid">
       <div class="footer-brand">
-        <a class="logo" href="index.html">TeenWell</a>
+        <a class="logo" href="index.html">HabitTide</a>
         <p class="muted small">© 2025 Teen Wellness Project</p>
       </div>
     </div>
