--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Contact — TeenWell</title>
+  <title>Contact — HabitTide</title>
   <link rel="stylesheet" href="style.css" />
   <style>
     .guest [data-auth="in"]{display:none!important;}
@@ -20,7 +20,7 @@
 
 <header class="site-header">
   <div class="container nav">
-    <a class="logo" href="index.html">TeenWell</a>
+    <a class="logo" href="index.html">HabitTide</a>
     <nav class="nav-links">
       <a href="index.html">Home</a>
       <a href="blog/">Blog</a>
@@ -41,7 +41,7 @@
 <main class="section">
   <div class="container narrow">
     <p class="kicker">Say hello</p>
-    <h1 class="h1">Contact TeenWell</h1>
+    <h1 class="h1">Contact HabitTide</h1>
     <p class="lead">Questions, feedback, partnership ideas? We’d love to hear from you.</p>
 
     <form class="card contact-form" onsubmit="location.href='mailto:hello@example.com'; return false;">
@@ -71,8 +71,8 @@
 <footer class="site-footer">
   <div class="container footer-grid">
     <div>
-      <a class="logo" href="index.html">TeenWell</a>
-      <p class="muted small">© 2025 TeenWell — Educational content only.</p>
+      <a class="logo" href="index.html">HabitTide</a>
+      <p class="muted small">© 2025 HabitTide — Educational content only.</p>
     </div>
   </div>
 </footer>
