--- a/login.html
+++ b/login.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Log In — TeenWell</title>
+  <title>Log In — HabitTide</title>
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="signup.css" />
 </head>
 <body>
   <header class="site-header">
     <div class="container nav">
-      <a class="logo" href="index.html">TeenWell</a>
+      <a class="logo" href="index.html">HabitTide</a>
       <nav class="nav-links">
         <a href="index.html">Home</a>
         <a href="resources.html">Resources</a>
