--- a/newsletter.html
+++ b/newsletter.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Newsletter — TeenWell</title>
+  <title>Newsletter — HabitTide</title>
   <link rel="stylesheet" href="style.css" />
   <style>
     /* Auth-aware visibility (or move to style.css globally) */
@@ -27,7 +27,7 @@
   <!-- ================= NAV ================= -->
   <header class="site-header">
     <div class="container nav">
-      <a class="logo" href="index.html">TeenWell</a>
+      <a class="logo" href="index.html">HabitTide</a>
 
       <nav class="nav-links">
         <a href="index.html">Home</a>
@@ -113,7 +113,7 @@
             <p>Protein + colors + smart carbs: school-day nutrition you’ll keep.</p>
           </article>
           <article class="card">
-            <h3 class="h3">#1 — Welcome to TeenWell</h3>
+            <h3 class="h3">#1 — Welcome to HabitTide</h3>
             <p>Why we started, what’s inside, and how to get involved.</p>
           </article>
         </div>
@@ -133,7 +133,7 @@
   <footer class="site-footer">
     <div class="container footer-grid">
       <div class="footer-brand">
-        <a class="logo" href="index.html">TeenWell</a>
+        <a class="logo" href="index.html">HabitTide</a>
         <p class="muted small">© 2025 Teen Wellness Project</p>
       </div>
       <div class="footer-col">
